# TPalgo

tp2/: CMakeLists.txt  main_exo10.c  main_exo11.c  main_exo12.c  main_exo13.c  main_exo3.c
tp3/: CMakeLists.txt  main_exo1.c  main_exo10.c  main_exo2.c  main_exo3.c  main_exo4.c  main_exo5.c  main_exo6.c  main_exo7.c  main_exo8.c  main_exo9.c
tp4/: CMakeLists.txt  fonctionsDeBase.h  main_exo1.c  main_exo2.c  main_exo3.c  main_exo4.c  main_exo5.c
tp5/: CMakeLists.txt  fonctionsbases.h  main_exo.c  main_exo1.c  main_exo2.c  main_exo3.c
tp6/: CMakeLists.txt  fonctionsBases.h  main_exo1.c  main_exo2.c  main_exo3.c  main_exo4.c  main_exo5.c
tp7/: CMakeLists.txt  fonctionsDeBases.h  main_exo1.c  main_exo2.c  main_exo3.c
tp8/: CMakeLists.txt  main_exo1.c  main_exo2.c  texte2.txt
tp9/: CMakeLists.txt  exo1.c  exo2.c  exo3.c
