cmake_minimum_required(VERSION 3.23)
project(tp2 C)

set(CMAKE_C_STANDARD 99)

add_executable(tp2_exo3 main_exo3.c)
add_executable(tp2_exo10 main_exo10.c)
add_executable(tp2_exo11 main_exo11.c)
add_executable(tp2_exo12 main_exo12.c)
add_executable(tp2_exo13 main_exo13.c)
add_executable(tp2_exo14 main_exo14.c)
