cmake_minimum_required(VERSION 3.23)
project(tp3 C)

set(CMAKE_C_STANDARD 99)

add_executable(tp3_exo1 main_exo1.c)
add_executable(tp3_exo2 main_exo2.c)
add_executable(tp3_exo3 main_exo3.c)
add_executable(tp3_exo4 main_exo4.c)
add_executable(tp3_exo5 main_exo5.c)
add_executable(tp3_exo6 main_exo6.c)
add_executable(tp3_exo7 main_exo7.c)
add_executable(tp3_exo8 main_exo8.c)
add_executable(tp3_exo9 main_exo9.c)
add_executable(tp3_exo10 main_exo10.c)


